# RaylibConway

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt
Conway/: CMakeLists.txt  Conway.cpp  Conway.h  Events.cpp  Events.h  GameOfLife.cpp  GameOfLife.h  Grid.cpp  Grid.h  Gui.cpp  Gui.h  Loop.cpp  Loop.h  Main.cpp
RaylibWrapper/: CMakeLists.txt  Vec2.h  raylib-wrapper.cpp  raylib-wrapper.h
cmake/: FindRaylib.cmake
extras/: Vec2.h  raylib-extra.h
src/: CMakeLists.txt  C_Algorithm.cpp  C_Algorithm.h  Conway.cpp  Conway.h  Grid.cpp  Grid.h  Help.cpp  Help.h
